--- a/index.html
+++ b/index.html
@@ -881,8 +881,22 @@
             // Thrust
             if (this.keys['ArrowUp']) {
               this.thrust = Math.min(this.thrust + this.thrustAccel, this.maxThrust);
+
+              // Add engine particles when thrusting
+              if (Math.random() < 0.3) { // 30% chance per frame
+                this.addEngineParticle();
+              }
             } else {
               this.thrust = Math.max(this.thrust - this.thrustAccel * 2, 0);
+            }
+
+            // Check if rocket has moved to hide instruction popup
+            if ((this.keys['ArrowUp'] || this.keys['ArrowLeft'] || this.keys['ArrowRight']) && !this.hasMoved) {
+              this.hasMoved = true;
+              if (this.instructionPopup) {
+                this.instructionPopup.remove();
+                this.instructionPopup = null;
+              }
             }
 
             // Apply thrust
@@ -1075,35 +1089,40 @@
             this.bullets.push(bulletObj);
           }
 
-          addEngineParticles() {
+          addEngineParticle() {
+            // Calculate particle position behind the rocket
+            const particleX = this.x - Math.cos(this.rotation) * 40;
+            const particleY = this.y - Math.sin(this.rotation) * 40;
+
+            // Calculate particle velocity (opposite to rocket direction)
+            const particleVx = -Math.cos(this.rotation) * (0.5 + Math.random() * 0.5);
+            const particleVy = -Math.sin(this.rotation) * (0.5 + Math.random() * 0.5);
+
+            // Create particle element
             const particle = document.createElement('div');
             particle.style.cssText = `
               position: fixed;
               width: 4px;
               height: 4px;
-              background: linear-gradient(45deg, #ff6b6b, #ffa500);
+              background: #ff6b6b;
               border-radius: 50%;
               z-index: 9998;
               box-shadow: 0 0 8px #ff6b6b;
             `;
 
-            // Fix: Use actual rocket position, not calculated position
-            const particleX = this.x - Math.cos(this.rotation) * 40;
-            const particleY = this.y - Math.sin(this.rotation) * 40;
-
-            const particleObj = {
-              x: particleX,
-              y: particleY,
-              vx: -Math.cos(this.rotation) * 3 - (Math.random() - 0.5) * 3,
-              vy: -Math.sin(this.rotation) * 3 - (Math.random() - 0.5) * 2,
-              life: 25,
-              element: particle
-            };
-
             particle.style.left = particleX + 'px';
             particle.style.top = particleY + 'px';
             document.body.appendChild(particle);
-            this.engineParticles.push(particleObj);
+
+            // Add particle to array
+            this.engineParticles.push({
+              x: particleX,
+              y: particleY,
+              vx: particleVx,
+              vy: particleVy,
+              life: 20,
+              element: particle
+            });
           }
 
           spawnEnemy() {
